--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -20,7 +20,7 @@
  </ol>
  <ol>
   <div class="form-group">
-    <label for="message_name" class="control-label col-md-2">内容:</label>
+    <label for="message_body" class="control-label col-md-2">内容:</label>
       <div class="col-md-8">
       <%= f.text_area :body, :class => "form-control" %>
  </ol>
