--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,34 +2,24 @@
   <div class="panel-heading">
     メッセージ一覧
   </div>
-    
+
   <div class="panel-body">
-    <% @messages.each do |message| %>
-      <span class="label label-info"><%= message.name %></span>
-      <%= message.body %>
+    
+<% @messages.each do |message| %>
+
+      <span class="label label-info">
+<%= message.name %>
+</span>
+      
+<%= message.body %>
+
       <br>
-    <% end %>
+    
+<% end %>
+
   </div>
 </div>
 
-<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
-  <ol><div class="form-group">
-    <label for="message_name" class="control-label col-md-2">名前:</label>
-      <div class="col-md-8">
-      <%= f.text_field :name, :class => "form-control" %>
- </ol>
- <ol>
-  <div class="form-group">
-    <label for="message_body" class="control-label col-md-2">内容:</label>
-      <div class="col-md-8">
-      <%= f.text_area :body, :class => "form-control" %>
- </ol>
- <ol>
-     <%= f.submit class: "btn btn-sm btn-primary" %>
-</ol>
-    </div>
-  </div>
+<% #部分テンプレートを読み込んでいる %>
 
- 
-
-<% end %>
+<%= render 'form' %>
