--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -25,22 +25,19 @@
 <% end %>
 
 
-  <%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
-  <ol><div class="form-group">
-    <label for="message_name" class="control-label col-md-2">名前:</label>
-      <div class="col-md-8">
-      <%= f.text_field :name, :class => "form-control" %>
- </ol>
- <ol>
-  <div class="form-group">
-    <label for="message_body" class="control-label col-md-2">内容:</label>
-      <div class="col-md-8">
-      <%= f.text_area :body, :class => "form-control" %>
- </ol>
- <ol>
-     <%= f.submit class: "btn btn-sm btn-primary" %>
-</ol>
-    </div>
-  </div>
+ <%= form_for(@message) do |f| %>
+
+  名前:
+  
+<%= f.text_field :name %>
+
+
+  内容:
+  
+<%= f.text_field :body %>
+
+  
+<%= f.submit %>
+
 <% end %>
 <% end %>
