--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -25,19 +25,32 @@
 <% end %>
 
 
- <%= form_for(@message) do |f| %>
-
-  名前:
+<%= form_for(@message, html: {class: "form-horizontal"}) do |f| %>
+  <div class="form-group">
+    <label for="message_name" class="control-label col-md-2">名前:</label>
+    <div class="col-md-10">
+      <%= f.text_field :name, :class => "form-control" %>
+    </div>
+  </div>
   
-<%= f.text_field :name %>
-
-
-  内容:
+  <div class="form-group">
+    <label for="message_name" class="control-label col-md-2">年齢:</label>
+    <div class="col-md-10">
+      <%= f.text_field :age, :class => "form-control" %>
+    </div>
+  </div>
   
-<%= f.text_field :body %>
-
-  
-<%= f.submit %>
+  <div class="form-group">
+    <label for="bodytxt" class="control-label col-md-2">内容:</label>
+    <div class="col-md-10">
+    <%= f.text_area :body, :class => "form-control" %>
+    </div>
+    </div>
+    
+    <div class="col-md-3">
+  <%= f.submit class: "btn btn-primary btn-lg btn-block" %>
+  </div>
 
 <% end %>
+
 <% end %>
