--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -34,7 +34,7 @@
   </div>
   
   <div class="form-group">
-    <label for="message_name" class="control-label col-md-2">年齢:</label>
+    <label for="message_name" class="control-label col-md-2">年rei:</label>
     <div class="col-md-10">
       <%= f.text_field :age, :class => "form-control" %>
     </div>
